--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,7 @@
 /tmp/*
 !/log/.keep
 !/tmp/.keep
-
+/vendor/assets/bower_components
 # Ignore Byebug command history file.
 .byebug_history
 .idea/
