--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,8 @@
   "dependencies": {
     "angular": "angularjs#^1.6.3",
     "angular-ui-router": "^0.4.2",
-    "AngularDevise": "angular-devise#^1.3.0"
+    "AngularDevise": "angular-devise#^1.3.0",
+    "font-awesome": "^4.7.0",
+    "angular-material": "^1.1.3"
   }
 }
